--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,15 @@
 
       </div>
 
-    <div style="margin:10px;display: inline-block;"> Model :<input name="model1" type="text" [(ngModel)]="data2.model"
-        #model1="ngModel" required (change)="logChange(model1)" minlength="3" pattern="asanka">
+    <div style="margin:10px;display: inline-block;"> Model :
+      <input name="model1" 
+        type="text" 
+        [(ngModel)]="data2.model"
+        #model1="ngModel" 
+        required 
+        (change)="logChange(model1)" 
+        minlength="3" 
+        pattern="asanka">
 
       <div *ngIf="!model1.valid">
         <span *ngIf="model1.errors.required">model required</span>
@@ -34,9 +41,14 @@
   Selection:
   <span id="selectedRows"></span>
 </div>
-<ag-grid-angular style="width: 500px; height: 400px;" #agGrid class="ag-theme-blham" [rowData]="rowData"
-  [columnDefs]="columnDefs" [rowSelection]="rowSelection" (rowClicked)='onRowClicked($event)'
-  (cellClicked)='onCellClicked($event)' (selectionChanged)='onSelectionChanged($event)'>
+<ag-grid-angular style="width: 500px; height: 400px;" 
+  #agGrid class="ag-theme-blham" 
+  [rowData]="rowData"
+  [columnDefs]="columnDefs" 
+  [rowSelection]="rowSelection" 
+  (rowClicked)='onRowClicked($event)'
+  (cellClicked)='onCellClicked($event)' 
+  (selectionChanged)='onSelectionChanged($event)'>
 </ag-grid-angular>
 
 {{x.className}}
