--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+
+<h2>Modal boostrap Example</h2>
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
+
 <div class="title">
   {{"title"}}
   <button style="float: right; margin-left: 10px;">left</button>
@@ -52,3 +58,35 @@
 </ag-grid-angular>
 
 {{x.className}}
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+  
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button id="button" type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">CSV Upload</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="file">Choose CSV File</label>
+          <input type="file"
+                 id="file"
+                 (change)="handleFileInput($event)">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <input type="button" class="btn btn-default" value="Upload" (click)="uploadFileToServer()">
+      </div>
+    </div>
+    
+  </div>
+</div>
+
+
+
+
